# mona

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
api-docs/rapidoc/: index.html
api-docs/redoc/: index.html
api-docs/scalar/: index.html
api-docs/swagger-ui/: index.html
auth/: Cargo.toml  README.md  build.rs
auth/migrations/: 001_create_users_table.sql  005_email_verification.sql
auth/migrations/seed/: permissions.sql
auth/server/: Cargo.toml
auth/server/migrations/: 002_create_sessions_table.sql  004_create_permissions_model.sql
auth/server/src/: lib.rs  main.rs
auth/server/src/api/: introspect.rs  key_rotation.rs  login.rs  logout.rs  signup.rs  sysinfo.rs
auth/server/src/api/access_token/: generate.rs  mod.rs  verify.rs
auth/server/src/api/access_token/permissions/: mod.rs
auth/server/src/api/email/: check_availability.rs  initiate_verification.rs  mod.rs  verify_email.rs
auth/server/src/api/permissions/: assign.rs  revoke.rs
auth/server/src/api/username/: check_availability.rs
auth/server/src/core/: access_token.rs  basic.rs  mod.rs  permission.rs  principal.rs  session.rs
auth/src/: lib.rs  secrets.rs  smtp.rs  span.rs
auth/src/api/: heartbeat.rs  key_rotation.rs  private.rs  signup.rs  sysinfo.rs
auth/src/api/access_token/: generate.rs  verify.rs
auth/src/api/permissions/: mod.rs  (+1 more)
auth/src/core/: principal.rs  user.rs
auth/tests/: failed_login.rs
auth/tests/shared/: mod.rs
auth/ui/: global.css  package.json
auth/ui/src/: index.tsx
axum-middleware/: Cargo.toml
cache/cache/: Cargo.toml
cache/dashcache/: Cargo.toml
cache/dashcache/src/: lib.rs
cache/data-access/: Cargo.toml
cache/src/: cache_any.rs  lib.rs  registry.rs
cache/tag/: Cargo.toml
client-ip/: Cargo.toml
client-ip/src/: lib.rs
compiletime/: Cargo.toml
contextual/: Cargo.toml
contextual/src/: context.rs  lib.rs
data-access/: Cargo.toml
data-access/src/: lib.rs
email/: Cargo.toml
email/src/: email.rs
error-kind/: Cargo.toml
error-kind/src/: lib.rs
error-response/: Cargo.toml
error-response/src/: lib.rs
extra/: Cargo.toml
extra/src/: error_response.rs
file-serve/: Cargo.toml
fullstack/auth-ui/: package.json
fullstack/auth-ui/src/: button.module.scss
fullstack/auth/migrations/: 003_create_access_tokens_table.sql
fullstack/auth/tests/: user_onboarding.rs
fullstack/ui/: tsconfig.app.json
gateway/: Cargo.toml
gateway/src/: main.rs  registry.rs
iota/: Cargo.toml
jsoncodegen/: README.md
jsoncodegen/cli/: Cargo.toml
jsoncodegen/cli/src/: main.rs
jsoncodegen/core/: Cargo.toml
jsoncodegen/core/src/: type_graph.rs
jsoncodegen/java/: Cargo.toml
jsoncodegen/java/tests/template/: .gitignore  pom.xml
jsoncodegen/polyfill/: README.md  index.ts  package.json
jsoncodegen/rust/: Cargo.toml
jsoncodegen/telemetry/: Cargo.toml
jsoncodegen/telemetry/src/: main.rs
jsoncodegen/test-data/apple-health/: apple-health-export.json
jsoncodegen/test-data/aws/: aws-iam-policy.json
jsoncodegen/test-data/bitbucket/: bitbucket-pipelines.yml
jsoncodegen/test-data/cloudevents/: cloudevents-v1.json
jsoncodegen/test-data/contentful/: contentful-entry.json
jsoncodegen/test-data/did/: did-document.json
jsoncodegen/test-data/elastic/: logstash.conf
jsoncodegen/test-data/google/: google-maps-directions.json
jsoncodegen/test-data/helm/: helm-values.yaml
jsoncodegen/test-data/home-assistant/: home-assistant-state.json
jsoncodegen/test-data/huggingface/: huggingface-model-metadata.json
jsoncodegen/test-data/jenkins/: Jenkinsfile
jsoncodegen/test-data/kubernetes/: k8s-audit-log.json
jsoncodegen/test-data/maven/: pom.xml
jsoncodegen/test-data/mongodb/: mongodb-find-result.json
jsoncodegen/test-data/nats/: nats-message.json
jsoncodegen/test-data/plaid/: plaid-accounts-response.json
jsoncodegen/test-data/postman/: postman-collection-v2.json
jsoncodegen/test-data/scim/: scim-user.json
jsoncodegen/test-data/shopify/: shopify-order-webhook.json  shopify-product-webhook.json
jsoncodegen/test-macro/: Cargo.toml
jsoncodegen/test-utils/: Cargo.toml
leetcode-tracker/adapter/solid/: index.ts  package.json
leetcode-tracker/core/: GraphEngine.ts  LayoutStrategy.ts  index.ts  package.json  types.ts
leetcode-tracker/layout/grid/: index.ts  package.json
leetcode-tracker/layout/layered/: index.ts  package.json
leetcode-tracker/themes/: _core.scss  dark.scss  light.scss  package.json
middleware/src/: lib.rs  rate_limit.rs
oblivious/: Cargo.toml
oblivious/src/: main.rs  registration.rs  thumbprint.rs
polyfill/: jsoncodegen-wasm32-wasip1.test.ts  package.json
public/: jsoncodegen-java-wasm32-wasip1.wasm  jsoncodegen-rust-wasm32-wasip1.wasm
seed/: Cargo.toml
seed/src/: main.rs
shared/cache/: Cargo.toml
shared/cache/src/: cache.rs
shared/client-ip/src/: lib.rs
shared/compiletime/: Cargo.toml
shared/compiletime/src/: lib.rs
shared/contextual/src/: error.rs
shared/dashcache/: Cargo.toml
shared/email/src/: lib.rs
shared/extra/src/: error_kind.rs  lib.rs
shared/middleware/: Cargo.toml
shared/middleware/src/: latency.rs  leaked_5xx.rs
shared/signature/: Cargo.toml
shared/tag/src/: lib.rs
shared/templates/: verify-email.html
shared/test-proc-macros/: Cargo.toml
shared/token/: Cargo.toml
shared/validation/: Cargo.toml
signature/: Cargo.toml
signature/src/: lib.rs
site/: index.html  package-lock.json  package.json  vite.config.ts
site/lib/: debounce.ts
site/src/: index.css  index.tsx
src/pages/JsonCodeGen/: JsonCodeGen.tsx
tag/: Cargo.toml
test-proc-macros/: Cargo.toml
test-proc-macros/src/: lib.rs
token/: Cargo.toml
token/src/: lib.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/lib/utils/: debounce.ts
ui/lib/wasm/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
utils/: Cargo.toml
utils/src/: lib.rs
validation/: Cargo.toml
validation/src/: lib.rs  wasm.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+27 files in other folders)
