[package]
name = "axum-middleware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

client-ip = { workspace = true, optional = true }

[features]
latency = ["dep:axum", "dep:tracing"]
leaked-5xx = ["dep:axum", "dep:tracing"]
rate-limit = ["dep:axum", "dep:client-ip", "dep:dashmap", "dep:tracing"]