[package]
name = "client-ip"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, optional = true }
http = { workspace = true }
forwarded-header-value = { workspace = true }

[features]
axum = ["dep:axum"]