[package]
name = "email"
edition = "2024"

[dependencies]
lettre = { version = "0.11", default-features = false }
serde = { version = "1", optional = true }
sqlx = { version = "0.8", optional = true }
thiserror = "2"

[features]
serde = ["dep:serde", "lettre/serde"]
sqlx = ["dep:sqlx"]
sqlite = ["sqlx/sqlite"]
