[package]
name = "email"
edition = "2024"

[dependencies]
lettre = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
serde = ["dep:serde", "lettre/serde"]
sqlx = ["dep:sqlx"]
sqlite = ["sqlx/sqlite"]
