[package]
name = "email"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lettre = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
serde = ["dep:serde", "lettre/serde"]
sqlx = ["dep:sqlx"]
sqlite = ["sqlx/sqlite"]
