[package]
name = "extra"
edition = "2024"

[dependencies]
utoipa = { version = "5", optional = true }
serde = { version = "1", optional = true }
time = { version = "0.3", optional = true }

[features]
error-kind = []
error-response = ["dep:serde", "dep:time", "serde/derive"]
openapi = ["dep:utoipa"]
