[package]
name = "oblivious"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
jose-jwk = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }