[package]
name = "seed"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "any",
    "sqlite",
    "postgres",
    "mysql",
] }