[package]
name = "signature"
edition = "2024"

[dependencies]
base64 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

contextual = { workspace = true }