[package]
name = "token"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["thread_rng"] }
sha2 = { workspace = true }
zeroize = { workspace = true }
