[package]
name = "validation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = { workspace = true, optional = true }

[features]
wasm = ["dep:wasm-bindgen"]
