[package]
name = "auth"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
axum-macros = "0.5"
base64 = "0.22"
bcrypt = "0.17"
clap = { version = "4", features = ["derive", "env"] }
cookie = "0.18"
dotenvy = { version = "0.15", optional = true }
lettre = { version = "0.11", default-features = false, optional = true }
dashmap = "6.1"
forwarded-header-value = { version = "0.1.1", optional = true }
http = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time", "tls-rustls"] }
sysinfo = { version = "0.37", features = ["serde"] }
tera = { version = "1", optional = true }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "request-id", "trace"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
utoipa = { version = "5.4.0", optional = true }
zeroize = "1"

client-ip = { path = "../../shared/client-ip", optional = true }
contextual = { path = "../../shared/contextual" }
email = { path = "../../shared/email", features = ["serde", "sqlite"] }
extra = { path = "../../shared/extra", features = ["error-kind", "error-response"] }
middleware = { path = "../../shared/middleware", features = ["leaked-5xx"] }
signature = { path = "../../shared/signature", optional = true }
token = { path = "../../shared/token" }
validation = { path = "../../shared/validation" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
test-proc-macros = { path = "../../shared/test-proc-macros", features = [
    "email",
    "password",
    "username",
] }

[features]
await-tasks = []
client-ip = ["dep:client-ip"]
openapi = ["dep:utoipa", "extra/openapi"]
profiles = ["dep:dotenvy"]
rate-limit = ["middleware/rate-limit"]
serve-dir = []
smtp = [
    "dep:lettre",
    "dep:tera",
    "dep:signature",
    "lettre/builder",
    "lettre/pool",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "lettre/tracing",
]
smtp--no-tls = []
tracing = ["dep:tracing", "middleware/latency", "tracing-subscriber/env-filter"]

all = [
    "client-ip",
    "openapi",
    "profiles",
    "rate-limit",
    "serve-dir",
    "smtp",
    "tracing",
]
dangerous = ["await-tasks", "smtp--no-tls"]
