[package]
name = "auth"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["json", "tokio", "http1", "http2", "form", "query"] }
axum-extra = { workspace = true, features = ["cookie"] }
axum-macros = { workspace = true }
base64 = { workspace = true, features = ["std"] }
bcrypt = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "env", "std"] }
cookie = { workspace = true }
dotenvy = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
dashmap = { workspace = true }
forwarded-header-value = { workspace = true, optional = true }
http = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serde = { workspace = true, features = ["derive", "std"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "time", "tls-rustls", "macros", "migrate"] }
sysinfo = { workspace = true, features = ["serde", "disk", "system"] }
tera = { workspace = true, optional = true }
thiserror = { workspace = true, features = ["std"] }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "request-id", "trace"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true, features = ["macros"] }
zeroize = { workspace = true }

client-ip = { workspace = true, optional = true }
contextual = { workspace = true }
email = { workspace = true, features = ["serde", "sqlite"] }
error-kind = { workspace = true }
error-response = { workspace = true, features = ["datetime", "kind", "help"] }
axum-middleware = { workspace = true, features = ["leaked-5xx"] }
signature = { workspace = true, optional = true }
token = { workspace = true }
validation = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }
test-proc-macros = { workspace = true, features = [
    "email",
    "password",
    "username",
] }

[features]
await-tasks = []
client-ip = ["dep:client-ip"]
openapi = ["dep:utoipa", "error-response/openapi"]
profiles = ["dep:dotenvy"]
rate-limit = ["axum-middleware/rate-limit"]
serve-dir = []
smtp = [
    "dep:lettre",
    "dep:tera",
    "dep:signature",
    "lettre/builder",
    "lettre/pool",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "lettre/tracing",
]
smtp--no-tls = []
tracing = ["dep:tracing", "axum-middleware/latency", "tracing-subscriber/env-filter", "tracing-subscriber/fmt", "tracing-subscriber/std"]

all = [
    "client-ip",
    "openapi",
    "profiles",
    "rate-limit",
    "serve-dir",
    "smtp",
    "tracing",
]
dangerous = ["await-tasks", "smtp--no-tls"]
