[package]
name = "cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing"]