[package]
name = "dashcache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dashmap = { workspace = true }
tracing = { workspace = true, optional = true }

cache = { workspace = true }

[features]
tracing = ["dep:tracing", "cache/tracing"]