[package]
name = "data-access"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["sqlite", "time"] }
thiserror = { workspace = true }

cache = { workspace = true }

[features]
tracing = ["cache/tracing"]