[package]
name = "jsoncodegen-cli"
description = "json code generation cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "jcg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env", "std"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive", "std"] }
wasmtime = { workspace = true, default-features = false, features = [
    "cranelift",
] }
wasmtime-wasi = { workspace = true, default-features = false, features = ["p1"] }

utils = { workspace = true }
