[package]
name = "jsoncodegen"
description = "json code generation library"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true, features = ["std"] }

iota = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["std"] }
