[package]
name = "jsoncodegen-java"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
convert_case = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
unicode-general-category = { workspace = true }

jsoncodegen = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread"] }

jsoncodegen-test-macro = { workspace = true }
jsoncodegen-test-utils = { workspace = true }