[package]
name = "jsoncodegen-telemetry"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "http2"] }
clap = { workspace = true, features = ["derive", "env", "std"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "std"] }

utils = { workspace = true }