[package]
name = "jsoncodegen-test-macro"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
glob = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["proc-macro"] }
