[package]
name = "middleware"
edition = "2024"

[dependencies]
axum = { version = "0.8", optional = true }
dashmap = { version = "6.1", optional = true }
tracing = { version = "0.1", optional = true }

client-ip = { path = "../client-ip", optional = true }

[features]
latency = ["dep:axum", "dep:tracing"]
leaked-5xx = ["dep:axum", "dep:tracing"]
rate-limit = ["dep:axum", "dep:client-ip", "dep:dashmap", "dep:tracing"]
