[package]
name = "test-proc-macros"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }

email = { workspace = true, optional = true }
validation = { workspace = true, optional = true }

[features]
email = ["dep:email"]
password = ["dep:validation"]
username = ["dep:validation"]

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits", "proc-macro"] }