[package]
name = "test-proc-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }

email = { workspace = true, optional = true }
validation = { workspace = true, optional = true }

[features]
email = ["dep:email"]
password = ["dep:validation"]
username = ["dep:validation"]

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits", "proc-macro"] }